# LibOPF

./: .gitignore  CMakeLists.txt  Makefile
data/: mpeg7_BAS.dat.out
include/: OPF.h
include/util/: common.h  linearpq.h  opftree.h  subgraph.h
src/: OPF.c  opf_clean.c  opf_dimensionality.c  opf_fold.c  opf_learn.c
src/util/: common.c  linearpq.c  opftree.c
tools/: check_opf_dataset.txt
tools/src/: opf2txt.c
